css-card, css-multiple-cards folders

--- a/css-card/index.html
+++ b/css-card/index.html
@@ -8,42 +8,33 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<article class="card">
-			<div class="card__image-container">
-				<img src="image.jpg" alt="profile" class="card__image" />
-			</div>
-			<div class="card__header">
-				<h2 class="card__title no-margin">This is your card tittle</h2>
-				<p
-					class="card__subtitle"
-					data-section="profile"
-					data-value="rol"
-				>
-					Some text example
-				</p>
-			</div>
-			<div class="card__body">
-				<div class="card__link">
-					<i class="fas fa-envelope icon"></i>
-					<a href="mailto:doriandesings@gmail.com"
-						>personal.contact.dcs@gmail.com</a
-					>
+		<div class="temp">
+			<article class="card">
+				<div class="card__image-container">
+					<img class="card__image" src="image.jpg" alt="" />
 				</div>
-				<div class="card__link">
-					<i class="fas fa-phone-alt icon"></i>
-					<a href="tel:+34123456789">123456789</a>
+
+				<div class="card__header">
+					<div class="card__tittle">Esto es nuestro título</div>
+					<div class="card__subtittle">Esto es un subtítulo</div>
 				</div>
-				<p
-					class="card__text"
-					data-section="profile"
-					data-value="description"
-				>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
-					dolorum rem, soluta omnis quae error earum pariatur dolores
-					labore distinctio ut officiis veritatis mollitia. Ipsam
-					consequatur officia minus nemo laboriosam.
-				</p>
-			</div>
-		</article>
+
+				<div class="card__body">
+					<div class="card__link">
+						<a href="#">correo@gmail.com</a>
+					</div>
+					<div class="card__link">
+						<a href="#">9999999</a>
+					</div>
+
+					<p class="card__text">
+						Lorem ipsum dolor sit amet consectetur, adipisicing
+						elit. Neque illo fuga qui commodi rerum totam atque ea
+						veniam at deserunt soluta, vel ullam similique non
+						impedit dolore laudantium consequuntur ipsam?
+					</p>
+				</div>
+			</article>
+		</div>
 	</body>
 </html>
