--- a/css-multiple-cards/index.html
+++ b/css-multiple-cards/index.html
@@ -11,36 +11,20 @@
 		<main class="main">
 			<article class="card">
 				<div class="card__image-container">
-					<img src="image.jpg" alt="profile" class="card__image" />
+					<img src="image.jpg" alt="" class="card__image" />
 				</div>
 				<div class="card__header">
-					<h2 class="card__title no-margin">
-						This is your card tittle
-					</h2>
-					<p
-						class="card__subtitle"
-						data-section="profile"
-						data-value="rol"
-					>
-						Some text example
-					</p>
+					<h2 class="card__title">Este es nuestro título</h2>
+					<p class="card__subtitle">Este es nuestro subtítulo</p>
 				</div>
 				<div class="card__body">
 					<div class="card__link">
-						<i class="fas fa-envelope icon"></i>
-						<a href="mailto:doriandesings@gmail.com"
-							>personal.contact.dcs@gmail.com</a
-						>
+						<a href="#">correo@gmail.com</a>
 					</div>
 					<div class="card__link">
-						<i class="fas fa-phone-alt icon"></i>
-						<a href="tel:+34123456789">123456789</a>
+						<a href="#">99999999</a>
 					</div>
-					<p
-						class="card__text"
-						data-section="profile"
-						data-value="description"
-					>
+					<p class="card__text">
 						Lorem ipsum dolor sit amet consectetur adipisicing elit.
 						Est dolorum rem, soluta omnis quae error earum pariatur
 						dolores labore distinctio ut officiis veritatis
@@ -51,36 +35,20 @@
 			</article>
 			<article class="card">
 				<div class="card__image-container">
-					<img src="image.jpg" alt="profile" class="card__image" />
+					<img src="image.jpg" alt="" class="card__image" />
 				</div>
 				<div class="card__header">
-					<h2 class="card__title no-margin">
-						This is your card tittle
-					</h2>
-					<p
-						class="card__subtitle"
-						data-section="profile"
-						data-value="rol"
-					>
-						Some text example
-					</p>
+					<h2 class="card__title">Este es nuestro título</h2>
+					<p class="card__subtitle">Este es nuestro subtítulo</p>
 				</div>
 				<div class="card__body">
 					<div class="card__link">
-						<i class="fas fa-envelope icon"></i>
-						<a href="mailto:doriandesings@gmail.com"
-							>personal.contact.dcs@gmail.com</a
-						>
+						<a href="#">correo@gmail.com</a>
 					</div>
 					<div class="card__link">
-						<i class="fas fa-phone-alt icon"></i>
-						<a href="tel:+34123456789">123456789</a>
+						<a href="#">99999999</a>
 					</div>
-					<p
-						class="card__text"
-						data-section="profile"
-						data-value="description"
-					>
+					<p class="card__text">
 						Lorem ipsum dolor sit amet consectetur adipisicing elit.
 						Est dolorum rem, soluta omnis quae error earum pariatur
 						dolores labore distinctio ut officiis veritatis
