css-multiple-card tutorial

--- a/css-multiple-card/index.html
+++ b/css-multiple-card/index.html
@@ -57,6 +57,30 @@
 					</p>
 				</div>
 			</article>
+			<article class="card">
+				<div class="card__image-container">
+					<img src="image.jpg" alt="" class="card__image" />
+				</div>
+				<div class="card__header">
+					<h2 class="card__title">Este es nuestro título</h2>
+					<p class="card__subtitle">Este es nuestro subtítulo</p>
+				</div>
+				<div class="card__body">
+					<div class="card__link">
+						<a href="#">correo@gmail.com</a>
+					</div>
+					<div class="card__link">
+						<a href="#">99999999</a>
+					</div>
+					<p class="card__text">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Est dolorum rem, soluta omnis quae error earum pariatur
+						dolores labore distinctio ut officiis veritatis
+						mollitia. Ipsam consequatur officia minus nemo
+						laboriosam.
+					</p>
+				</div>
+			</article>
 		</main>
 	</body>
 </html>
